--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,15 +1,50 @@
+@import url('https://fonts.googleapis.com/css?family=Inter:700|Ubuntu:400');
+
+html {font-size: 100%} /* 16px */
+
+h1 {font-size: 5.652rem; /* 90.4px */}
+
+h2 {font-size: 3.997rem; /* 64px */}
+
+h3 {font-size: 2.827rem; /* 45.28px */}
+
+h4 {font-size: 1.999rem; /* 32px */}
+
+h5 {font-size: 1.414rem; /* 22.56px */}
+
+small {font-size: 1.4rem; /* 11.36px */}
+
+
 :root{
-    --background-color: #70dbae;
+    --background-color: 10, 8, 7;
+    --secondary-background-color: 180, 239, 224;
+    --accent: 239, 121, 17;
+    --secondary: 67, 93, 95;
+    --text: 244, 241, 239;
+
+    --textFont: "Ubuntu",
+    --headingFont: "Inter",
 }
 
 body {
-    background-color: var(--background-color);
+    background-color: rgb(var(--background-color));
     margin : 0;
     padding: 0;
+    color : rgb(var(--text));
+    font-family: "Ubuntu";
+    font-weight: 400;
 }
 
+p {
+    font-size: 1.4rem;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Inter';
+    font-weight: 700;
+  }
+
 .MainHighlightArea {
-    height: 300;
     margin : 0;
     padding: 0;
 }
@@ -17,5 +52,63 @@ body {
 img {
     width:100%;
     height: auto;
-    margin: 0; /* Center the image horizontally */
+    margin: 0;
 }
+
+.DevlogHighlights {
+    padding-top: 5pc;
+    padding-bottom: 5pc;
+    padding-left: 1pc;
+    padding-right: 1pc;
+}
+
+.DevlogHighlights h2{
+    padding-left: 1pc;
+}
+
+.DevlogHighlights table{
+    border-radius: 2pc;
+    padding: 1pc;
+    width : 100%;
+}
+
+.DescriptionRow{
+    background: rgba(var(--secondary),0.2);
+    border-radius: 0.5rem 0.5rem 0 0;
+    border-top: 0.5rem solid rgb(var(--accent));
+    border-bottom: 1rem;
+    padding: 1pc;
+    display: flex;
+    align-items : center;
+}
+
+.ScaledImage {
+    width:auto;
+    height: 300px;
+    border-radius: 0.2pc;
+}
+
+.Description{
+    margin-left: 0.5pc;
+    padding: 1pc;
+    padding-top: 0;
+    padding-right: 2pc;
+    width: 100%;
+    height : 300px;
+    max-height: 300px;
+    box-sizing: border-box;
+    border-left: 0.25rem solid rgba(var(--secondary-background-color),0.7);
+    background-color: rgba(var(--background-color),0.2);
+}
+
+.Description h4{
+    margin-top: 0.4rem;
+    margin-bottom: 0.25rem;
+}
+
+.Description div{
+    margin-top: 0;
+    margin-bottom: 2rem;
+    line-height: 1.2rem;
+}
+
