--- a/mainStyle.css
+++ b/mainStyle.css
@@ -2,18 +2,21 @@
 
 html {font-size: 100%} /* 16px */
 
-h1 {font-size: 5.652rem; /* 90.4px */}
+h1 {font-size: 10vh /* 90.4px */}
 
-h2 {font-size: 3.997rem; /* 64px */}
+h2 {font-size: 7vh /* 64px */}
 
-h3 {font-size: 2.827rem; /* 45.28px */}
+h3 {font-size: 5vh /* 45.28px */}
 
-h4 {font-size: 1.999rem; /* 32px */}
+h4 {font-size: 3vh; /* 32px */}
 
-h5 {font-size: 1.414rem; /* 22.56px */}
+h5 {font-size: 2.5vh; /* 22.56px */}
 
-small {font-size: 1.4rem; /* 11.36px */}
+small {font-size: 2.5vh; /* 11.36px */}
 
+root {
+    font-size: small;
+}
 
 :root{
     --background-color: 10, 8, 7;
@@ -33,10 +36,11 @@ body {
     color : rgb(var(--text));
     font-family: "Ubuntu";
     font-weight: 400;
+    text-align: justify;
 }
 
 p {
-    font-size: 1.4rem;
+    font-size: 2.5vh;
 }
 
 h1, h2, h3, h4, h5 {
@@ -56,28 +60,27 @@ img {
 }
 
 .DevlogHighlights {
-    margin-top: 4pc;
-    margin-bottom: 4pc;
-    padding-top: 5pc;
-    padding-bottom: 5pc;
-    padding-left: 1pc;
-    padding-right: 1pc;
-
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 2vh;
+    padding-right: 2vh;
     background: rgba(var(--secondary),0.1);
     background:
-        linear-gradient(180deg, rgba(var(--secondary-background-color), 0.0) 0%, rgba(var(--secondary-background-color), 0.05) 5pc , rgba(var(--secondary-background-color), 0.05) calc(100% - 5pc) , rgba(var(--secondary-background-color), 0.00) 100%)
+        linear-gradient(180deg, rgba(var(--secondary-background-color), 0.0) 0%, rgba(var(--secondary-background-color), 0.05) 10vh , rgba(var(--secondary-background-color), 0.05) calc(100% - 10vh) , rgba(var(--secondary-background-color), 0.00) 100%)
 }
 
 .DevlogHighlights h2{
-    padding-left: 1pc;
+    padding-left: 2vh;
     border-bottom: 0.25rem solid rgb(var(--accent));
     margin-top: 0;
 }
 
 .DevlogHighlights table{
-    border-radius: 2pc;
-    padding: 1pc;
-    width : 100%;
+    border-radius: 4vh;
+    padding: 2vh;
+    width : 100vw;
 }
 
 .DescriptionRow{
@@ -86,42 +89,43 @@ img {
     border-radius: 0.5rem 0.5rem 0 0;
     border-top: 0.5rem solid rgb(var(--accent));
     border-bottom: 1rem;
+    max-width : 100%;
+    min-height: 0;
+    margin-bottom: 1rem;
 
-    margin-bottom: 1pc;
+    position:relative; 
+    height:auto;; 
 
-    padding: 1pc;
-    display: flex;
-    align-items : center;
+    padding: 2rem;
 }
 
-.ScaledImage {
-    width:auto;
-    height: 300px;
-    border-radius: 0.2pc;
+.DescriptionRow img{
+    float :left; 
+    align-self: center;
+    height: 15vh;
+    margin : 0.5rem 1rem 1rem 2.5rem;
+    width:auto; 
 }
 
 .Description{
-    margin-left: 0.5pc;
-    padding: 1pc;
-    padding-top: 0;
-    padding-right: 2pc;
-    width: 100%;
-    height : 300px;
-    max-height: 300px;
-    box-sizing: border-box;
-    border-left: 0.25rem solid rgba(var(--secondary-background-color),0.7);
+    margin-left: 0.5rem;
+    padding: 1rem;
+    padding-top: 0.5rem;
+    padding-right: 2rem;
+    
+    border-left: 1rem solid rgba(var(--secondary-background-color),0.7);
     background: rgba(var(--background-color),0.2);
     background: linear-gradient(90deg, rgba(var(--background-color),0.4) 0%, rgba(var(--background-color),0) 100%);
 }
 
-.Description h4{
-    margin-top: 0.4rem;
-    margin-bottom: 0.25rem;
+.DevlogHighlights h3{
+    margin-top: 2vh;
+    margin-bottom: 1.5vh;
 }
 
-.Description div{
+.Description p{
     margin-top: 0;
-    margin-bottom: 2rem;
-    line-height: 1.2rem;
+    margin-bottom: 0;
+    line-height: 3vh;
 }
 
