--- a/Pages/devlog.css
+++ b/Pages/devlog.css
@@ -12,7 +12,7 @@ h4 {font-size: 1.2rem; /* 32px */}
 
 h5 {font-size: 1rem; /* 22.56px */}
 
-small {font-size: min(3.5vh,3.5vw); /* 11.36px */}
+small {font-size: 1rem; /* 11.36px */}
 
 :root{
     --background-color: 10, 8, 7;
