--- a/mainStyle.css
+++ b/mainStyle.css
@@ -19,11 +19,12 @@ root {
 }
 
 :root{
-    --background-color: 10, 8, 7;
+    --background-color: 16, 17, 22;
     --secondary-background-color: 180, 239, 224;
-    --accent: 239, 121, 17;
+    --accent: 239, 83, 17;
     --secondary: 67, 93, 95;
-    --text: 244, 241, 239;
+    --text: 251, 243, 238;
+    --heading-text: 244, 243, 242;
 
     --textFont: "Ubuntu",
     --headingFont: "Inter",
@@ -46,6 +47,7 @@ p {
 h1, h2, h3, h4, h5 {
     font-family: 'Inter';
     font-weight: 700;
+    color: rgb(var(--heading-text));
   }
 
 .MainHighlightArea {
@@ -57,28 +59,22 @@ img {
     width:100%;
     height: auto;
     margin: 0;
+    border-bottom: 0.25rem solid rgba(var(--accent),1);
 }
 
 .DevlogHighlights {
     margin-top: 1rem;
     margin-left: min(7rem,10vw);
     margin-right: min(7rem,10vw);
-    padding-left: min(3rem,5vw);
-    padding-right: min(3rem,5vw);
+
     padding-bottom: 4rem;
     padding-top: 2rem;
-    border-bottom: 0.5rem solid rgba(var(--accent), 0.6);
-    border-radius: 0 0 0.25rem 0.25rem;
-    background: rgba(var(--secondary),0.1);
-    background:
-        linear-gradient(180deg, rgba(var(--secondary-background-color), 0.0) 0%, rgba(var(--secondary-background-color), 0.05) 4rem )
+    
 }
 
 .DevlogHighlights h2{
     padding-left: 0.5rem;
     border-bottom: 0.25rem solid rgba(var(--accent),1);
-    /*border-left: 0.25rem solid rgba(var(--secondary-background-color),0.7);*/
-    border-radius: 0.25rem;
     margin-top: 0;
 }
 
@@ -89,40 +85,34 @@ img {
 }
 
 .DescriptionRow{
-    background: rgba(var(--secondary),0.2);
-
-    border-radius: 0.25rem 0.25rem 0 0;
-    border-top: 0.25rem solid rgba(var(--accent),0.8);
-    border-bottom: 1rem;
     max-width : 100%;
     min-height: 0;
     margin-bottom: 1rem;
 
     position:relative; 
-    height:auto;; 
+    height:auto;
 
-    padding: 2rem;
-    padding-left: min(2rem,5vw);
-    padding-right: min(2rem,5vw);
     padding-top: 1rem;
 }
 
 .DescriptionRow img{
     float :left; 
     align-self: center;
-    height: 6rem;
-    margin : 0.75rem 0.5rem 0.25rem min(1.75rem,5vw);
+    height: 5rem;
+    margin : 0.25rem 0.25rem 0 1.25rem;
     border-radius: 0.5rem;
     width:auto; 
+    border:0;
 }
 
 .Description{
     margin-left: min(0.75rem,5vw);
-    padding: 0.5rem;
-    padding-top: 0.5rem;
-    padding-right: 2rem;
+    padding: 0.25rem;
+    padding-top: 0;
+    padding-bottom: 0;
     
-    border-left: 0.5rem solid rgba(var(--secondary-background-color),0.7);
+    border-left: 0.25rem solid rgba(var(--secondary-background-color),0.8);
+
     background: rgba(var(--background-color),0.2);
     background: linear-gradient(90deg, rgba(var(--background-color),0.4) 0%, rgba(var(--background-color),0) 100%);
 }
@@ -130,6 +120,8 @@ img {
 .DevlogHighlights h3{
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
+    border-radius: 0.25rem 0.25rem 0 0;
+    border-bottom: 0.25rem solid rgba(var(--accent),0.8);
 }
 
 .Description p{
