--- a/Pages/devlog.css
+++ b/Pages/devlog.css
@@ -2,9 +2,9 @@
 
 html {font-size: min(3.5vh,3vw)} /* 16px */
 
-h1 {font-size: 3rem; /* 90.4px */}
+h1 {font-size: 2rem; /* 90.4px */}
 
-h2 {font-size: 2.5rem /* 64px */}
+h2 {font-size: 2rem /* 64px */}
 
 h3 {font-size: 1.6rem;/* 45.28px */}
 
@@ -48,8 +48,22 @@ p {
 
 h1, h2, h3, h4, h5 {
     font-family: 'Inter';
-    font-weight: 700;
+    font-weight: bold;
     color: rgb(var(--heading-text));
+}
+
+h1{
+    font-weight:bolder;
+    position: absolute;
+    top:0;
+    Left:0;
+    margin-left: 0;
+    margin-top: 0;
+    background-color: rgba(var(--background-color),0.7);
+    border-bottom: 0.1rem solid rgba(var(--text),0.9);
+    border-right: 0.1rem solid rgba(var(--text),0.9);
+    padding-right: 0.5rem;
+    padding-bottom: 0.25rem;
 }
 
 img {
@@ -89,8 +103,7 @@ a:visited:hover {
     margin-top: 2rem;
     margin-left: min(7rem,10vw);
     margin-right: min(7rem,10vw);
-    padding-left: min(3rem,5vw);
-    padding-right: min(3rem,5vw);
+
     padding-bottom: 4rem;
     padding-top: 0rem;
 }
