--- a/mainStyle.css
+++ b/mainStyle.css
@@ -48,7 +48,22 @@ h1, h2, h3, h4, h5 {
     font-family: 'Inter';
     font-weight: 700;
     color: rgb(var(--heading-text));
-  }
+}
+
+h1{
+    font-weight:bolder;
+    position: absolute;
+    top:0;
+    Left:0;
+    margin-left: 0;
+    margin-top: 0;
+    background-color: rgba(var(--background-color),0.7);
+    border-bottom: 0.1rem solid rgba(var(--text),0.9);
+    border-right: 0.1rem solid rgba(var(--text),0.9);
+    padding-right: 1rem;
+    padding-bottom: 0.25rem;
+}
+
 
 .MainHighlightArea {
     margin : 0;
